[package]
name = "omnitigs"
description = "Omnitig-related algorithms"
categories = ["mathematics", "algorithms", "science"]
keywords = ["genome", "assembly", "omnitigs", "bioinformatics"]
version = "1.1.0"
authors = ["Sebastian Schmidt <isibboi@gmail.com>"]
edition = "2021"
homepage = "https://github.com/sebschmi/omnitigs-rs"
documentation = "https://docs.rs/omnitigs"
repository = "https://github.com/sebschmi/omnitigs-rs"
readme = "README.md"
license = "BSD-2-Clause"
rust-version = "1.58.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
traitgraph = "1.0.0"
traitgraph-algo = "1.0.0"
bigraph = "1.0.0"
traitsequence = "1.0.0"
bitvector = "0.1.5"
rand = "0.8.4"
log = "0.4.14"
