[package]
name = "omnitigs"
description = "Omnitig-related algorithms"
categories = ["mathematics", "algorithms", "science"]
keywords = ["genome", "assembly", "omnitigs", "bioinformatics"]
version = "5.0.1"
authors = ["Sebastian Schmidt <isibboi@gmail.com>"]
edition = "2021"
homepage = "https://github.com/sebschmi/omnitigs-rs"
documentation = "https://docs.rs/omnitigs"
repository = "https://github.com/sebschmi/omnitigs-rs"
readme = "README.md"
license = "BSD-2-Clause"
rust-version = "1.70.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
traitgraph = "5.0.0"
traitgraph-algo = "8.0.0"
bigraph = "5.0.0"
traitsequence = "2.0.0"
bitvector = "0.1.5"
rand = "0.8.4"
log = "0.4.17"

[dev-dependencies]
rand_chacha = "0.3.1"
criterion = "0.5.1"

[[bench]]
name = "benches"
harness = false
